package protocol;

option java_package = "com.vr.protocol.Msg";

message LogoutReq{

}

message LogoutRsp{
	enum ResultCode{
    	SUCCESS = 0;
		FAIL = 1;
	}

	required ResultCode resultCode = 1;
}
